Fix - Align items in ListItem as in wireframe
Add classNames to more ListItem elements
Remove wrapping of text portion of buttons and index
Add positional CSS for left & center containers

--- a/root/frontend/src/components/ListItem/ListItem.css
+++ b/root/frontend/src/components/ListItem/ListItem.css
@@ -4,23 +4,39 @@
     /* margin-left: 5vw; */
     width: 80vw;
     margin: auto;
-    align-items: center;
+    align-items:stretch;
     justify-content: space-around;
+    border: solid 2px black;
+    border-radius: 14px;
 }
 .item-container:hover {
     background: white;
 }
+.xleft {
+    border: solid 2px red;
+    display:flex;
+    align-items: center;
+    flex-wrap: nowrap;
+}
+.item-index {
+    align-self: flex-start;
+    white-space: nowrap;
+}
 .item-image {
-    width: 100%;
-    height: 100%;
+    /*    width: 100%;
+    height: 100%; (ratio = 2:3)  */
+    width: 150px;
+    height: 225px;
     object-fit: cover;
 }
 .xcenter {
+    border: solid 2px orange;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
 }
-.item-description {
+/* .item-description {
     white-space: initial;
     line-height: 1.2em;
     height: 6em;
@@ -28,22 +44,27 @@
     overflow: hidden;
     text-overflow: ellipsis;
     word-wrap: break-word;
-}
-/* .xright {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center ;
-    align-content: space-between;
 } */
+.item-description {
+    display: -webkit-box;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    /* Text overflow only works on a single line of text, workaround as per "https://stackoverflow.com/questions/15909489/text-overflow-ellipsis-on-two-lines" and
+    "https://stackoverflow.com/questions/33058004/applying-an-ellipsis-to-multiline-text"*/
+}
 .xright {
+    border: solid 2px yellow;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    height: 100%;
+    /* height: 100%; NOTE: Why doesn't this work*/
 }
 .item-delete {
     align-self: flex-end;
+}
+.item-move {
+    white-space: nowrap;
 }
